--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,11 @@
             </div>
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item active">
+                <a class="nav-link" href="PneumoniaPredict">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Pneumonia Detection</span></a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="BrainTumorPredict">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Brain Tumor Detection</span></a>
