--- a/templates/home.html
+++ b/templates/home.html
@@ -9,20 +9,26 @@
 
     </div>
         <br>
-        <h2>Projects Description:</h2>
-        <ul>
-          <li><b>ML model based projects</b></li>
-            <p>1. Employee Churn Prediction</p>
-            <p>2. Heart Stroke Prediction</p>
+        <br>
+        <div>
+            <h2>Projects</h2>
+            <p>Click on the below project images for details</p>
+            <br>
 
-          <li><b>CNN models based projects</b></li>
-            <p>3. Employee Churn Prediction</p>
-            <p>4. Heart Stroke Prediction</p>
+            <table>
+                <tr>
+                   <td><img src="static/img/emp_att_icon5.jpg" alt=" " style="width:100%;"></td>
+                    <td><img src="static/img/hrt_strk_icon5.jpg" alt=" " style="width:100%;"></td>
+                    <td><img src="static/img/emailspam_icon.JPG" alt=" " style="width:100%;"></td>
+                </tr>
+                <tr>
+                    <td><img src="static/img/pneumnia_icon.jpg" alt=" " style="width:100%;"></td>
+                    <td><img src="static/img/brain_tumr_icon.jpg" alt=" " style="width:100%;"></td>
+                    <td><img src="static/img/malaria_icon.JPG" alt=" " style="width:100%;"></td>
+                </tr>
+            </table>
 
-          <li><b>NLP projects</b></li>
-            <p>5. Spam Message Classifier</p>
-
-        </ul>
+        </div>
 
 
 {% endblock %}
